Fix spacing: add project-role to experiments

--- a/style.css
+++ b/style.css
@@ -178,10 +178,6 @@ a {
   margin-bottom: 7rem;
 }
 
-#experiments .video-wrap {
-  margin-top: 2rem;
-}
-
 .project-info {
   display: flex;
   align-items: baseline;
